--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html lang="en">
+<!-- https://nigeldodd.github.io/dataScheme01/ -->
 <head>
   <link rel="manifest" href="/pwa/manifest.json">
   <meta charset="utf-8">
-  <title>Hello cat</title>
+  <title>Hello bat</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="white"/>
 </head>
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">Hello cat!</h1>
+    <h1 class="title">Hello bat!</h1>
   </div>
   <script src="js/main.js"></script>
 </body>
