--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="fullscreen">
   <div class="container">
     <h1 class="title">Hello bat!</h1>
+    <p id="pplacehoolder"> this is placeholder text</p>
   </div>
   <script src="js/main.js"></script>
 </body>
