--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">Hello bat!</h1>
+    <h1 class="title">Hello bat! 1</h1>
     <p id="pplacehoolder"> this is placeholder text</p>
   </div>
   <script src="js/main.js"></script>
