--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">Hello bat! 3</h1>
+    <h1 class="title">Hello bat! 4</h1>
     <p id="pplacehoolder"> this is placeholder text</p>
   </div>
   <script src="js/main.js"></script>
-  
+  <script>document.getElementById("pplaceholder").innerHTML="replacement text"</script>
 </body>
 </html>
