--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">Hello bat! 7</h1>
-    <p id="pplacehoolder"> this is placeholder text</p>
+    <h1 class="title">Hello bat! 8</h1>
+    <p id="pplaceholder"> this is placeholder text</p>
     <p id="para">Some text here</p>
     <button onclick="changeColor('blue');">blue</button>
     <button onclick="changeColor('red');">red</button>
