--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <div class="container">
     <h1 class="title">Hello bat! 26 </h1>
     <p id="pplaceholder"> this is placeholder text</p>
+    <table id="outerTable">    
+    </table>
   </div>
   <script src="js/main.js"></script>
 </body>
