--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <link rel="manifest" href="/pwa/manifest.json">
   <meta charset="utf-8">
-  <title>Hello bat</title>
+  <title>Clinical staging</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="white"/>
 </head>
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">Hello bat! 26 </h1>
+    <h1 class="title">Clinical staging rev 1</h1>
     <p id="pplaceholder"> this is placeholder text</p>
     <table id="outerTable">    
     </table>
