--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="fullscreen">
   <div class="container">
     <h1 class="title">Clinical staging</h1>
-    <p id="pplaceholder"> this is placeholder text</p>
+    <p id="pplaceholder"> this is placeholder text 1</p>
     <table id="outerTable">    
     </table>
   </div>
